2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* config/generic/tls.h: Remove the free list for transactions and ...
	* beginend.cc (GTM::gtm_transaction::operator new): ... allocate ...
	(GTM::gtm_transaction::operator delete): ... and release here.
	(thread_exit_handler): New. Delete tx when thread terminates.
	(thread_exit_init): New.
	(GTM::gtm_transaction::begin_transaction): Set up on-exit handler.
	* testsuite/libitm.c/txrelease.c: New file.

2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* query.cc (_ITM_getThreadnum): Set up gtm_thread if necessary. 
	* testsuite/libitm.c/notx.c: New file.

2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* config/generic/tls.h (gtm_thread): Move local_tid from here ...
	* libitm_i.h (local_tid): ... to here.
	* beginend.cc (GTM::gtm_transaction::begin_transaction): Same.
	(GTM::gtm_transaction::operator new): Set up gtm_thread if necessary.

2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* retry.cc (GTM::gtm_transaction::decide_begin_dispatch): Use
	serialirr_onwrite_dispatch as new default for now.
	* method-serial.cc (serialirr_onwrite_dispatch): New.
	(GTM::dispatch_serialirr_onwrite): New.
	* libitm_i.h: Same.

2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* beginend.cc (GTM::gtm_transaction::rollback): Roll back tx id as well.
	* query.cc (_ITM_getTransactionId): There is no active transaction if
	the current nesting level is zero.

2011-07-28  Torvald Riegel  <triegel@redhat.com>

	* beginend.cc (GTM::gtm_transaction::rollback): Fix nesting level
	rollback.

2011-07-28  Torvald Riegel  <triegel@redhat.com>

	* retry.cc (GTM::gtm_transaction::decide_begin_dispatch): Get
	transaction properties from the caller instead of from the
	transaction object.
	* libitm_i.h: Same.
	* beginend.cc (GTM::gtm_transaction::begin_transaction): Same. 

2011-07-28  Torvald Riegel  <triegel@redhat.com>

	* local.cc (gtm_transaction::rollback_local): Support closed nesting.